--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www"
+    "dev": "nodemon ./bin/www",
+    "test": "jest --coverage"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -16,12 +17,16 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "moment": "^2.30.1",
-    "mongoose": "^8.4.4",
     "morgan": "~1.9.1",
     "node-cron": "^3.0.3",
     "querystring": "^0.2.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.4"
+    "axios-mock-adapter": "^2.1.0",
+    "jest": "^29.7.0",
+    "jest-mock": "^29.7.0",
+    "mongoose": "^8.7.1",
+    "nodemon": "^3.1.4",
+    "supertest": "^7.0.0"
   }
 }
